tests/compile_fail/handle_scope_lifetime_4.stderr
error[E0597]: `scope2` does not live long enough
  --> tests/compile_fail/handle_scope_lifetime_4.rs:15:35
   |
12 |   let mut _scope3 = {
   |       ----------- borrow later stored here
13 |     let scope2 = pin!(v8::HandleScope::new(&mut *context_scope));
14 |     let mut scope2 = scope2.init();
   |         ---------- binding `scope2` declared here
15 |     v8::EscapableHandleScope::new(&mut scope2)
   |                                   ^^^^^^^^^^^ borrowed value does not live long enough
16 |   };
   |   - `scope2` dropped here while still borrowed

error[E0716]: temporary value dropped while borrowed
  --> tests/compile_fail/handle_scope_lifetime_4.rs:13:18
   |
12 |   let mut _scope3 = {
   |       ----------- borrow later stored here
13 |     let scope2 = pin!(v8::HandleScope::new(&mut *context_scope));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
16 |   };
   |   - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)
